[package]
name = "hemoglobin-search"
description = "Hemoglobin search utilities"
license = "MIT"
version = "0.1.3"
edition = "2024"
authors = ["Arity <katie-and@ampersandia.net>"]
readme = "README.md"
repository = "https://github.com/Hemolymph/hemoglobin-search"



[dependencies]
chumsky = "0.10.1"
hemoglobin = {path="../hemoglobin", version = "0.9.1"}
regex = "1.11.1"
rust-fuzzy-search = "0.1.1"

[dev-dependencies]
serde_json = "1.0.140"


